--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ PAYSTACK_PUBLIC_KEY=
 PAYSTACK_PRIVATE_KEY=
 mailgunDomain=
 mailgunSecret=
-MYSQL_DB_URL=
+MYSQL_DB_URL=mysql://root:@localhost:3306/reimbursement
+privateKeyPath=secrets/jwt/private_key.pem
+publicKeyPath=secrets/jwt/public_key.pem
